# user-connection-management

./: .gitignore  README.md  UserConnectionManagement_postman.json  db.sqlite3  env.example  pyproject.toml
connections/: models.py  serializer.py  tasks.py  urls.py  views.py
connections/migrations/: 0001_initial.py  0002_notification.py  0003_notification_updated_at.py
docker/: Dockerfile  compose.yml  entrypoint.sh
notification/: models.py  serializers.py  urls.py  views.py
notification/migrations/: 0001_initial.py  0002_alter_notification_table.py
project/: celery.py  settings.py  settings_backup.py  urls.py  utils.py
project/settings/: base.py  production.py
user/: auth.py  middleware.py  models.py  serializer.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_user_user_code.py
