[project]
name = "user-connection-management-f1soft"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.5.1",
    "django>=5.2",
    "djangorestframework>=3.16.0",
    "gunicorn>=23.0.0",
    "pyjwt>=2.10.1",
    "redis>=5.2.1",
]
